--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,12 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      body {
+        background: <%= color %>;
+        color: white;
+      }
+    </style>
+  </head>
   <body>
     <p>
       <%= message %>
