--- a/views/index.erb
+++ b/views/index.erb
@@ -18,5 +18,6 @@
       <input autofocus type='text' name='guess' />
       <input type='submit' value='Guess!' />
     </form>
+    <div><%= answer %></div>
   </body>
 </html>
