adds message classes and implements WayHigh

--- a/views/index.erb
+++ b/views/index.erb
@@ -18,6 +18,6 @@
       <input autofocus type='text' name='guess' />
       <input type='submit' value='Guess!' />
     </form>
-    <div><%= message_crafter.answer %></div>
+    <div><%= message_crafter.cheat %></div>
   </body>
 </html>
